--- a/client/src/styles/Password.scss
+++ b/client/src/styles/Password.scss
@@ -60,6 +60,7 @@
   .password-input-rules {
     display: flex;
     flex-direction: column;
+    margin-bottom: 0.6rem;
   }
 
   .password-input-rule {
